feature(reports): allow flow node reports grouped by flow node to be distributed by process
relates to OPT-5527