@@ -42,7 +42,6 @@ import org.junit.jupiter.params.provider.MethodSource;
 
 import javax.ws.rs.core.Response;
 import java.time.OffsetDateTime;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
@@ -763,12 +762,12 @@ public class FlowNodeFrequencyByFlowNodeReportEvaluationIT extends AbstractProce
       Arguments.of(
         IN,
         new String[]{DEFAULT_USERNAME},
-        Collections.singletonList(Tuple.tuple(USER_TASK_1, 1.))
+        List.of(Tuple.tuple(USER_TASK_1, 1.))
       ),
       Arguments.of(
         IN,
         new String[]{DEFAULT_USERNAME, SECOND_USER, null},
-        Arrays.asList(
+        List.of(
           Tuple.tuple(USER_TASK_1, 1.),
           Tuple.tuple(USER_TASK_2, 1.),
           Tuple.tuple(USER_TASK_3, 1.)
@@ -777,12 +776,12 @@ public class FlowNodeFrequencyByFlowNodeReportEvaluationIT extends AbstractProce
       Arguments.of(
         NOT_IN,
         new String[]{SECOND_USER},
-        Arrays.asList(Tuple.tuple(USER_TASK_1, 1.), Tuple.tuple(USER_TASK_3, 1.))
+        List.of(Tuple.tuple(USER_TASK_1, 1.), Tuple.tuple(USER_TASK_3, 1.))
       ),
       Arguments.of(
         NOT_IN,
         new String[]{DEFAULT_USERNAME, SECOND_USER},
-        Collections.singletonList(Tuple.tuple(USER_TASK_3, 1.))
+        List.of(Tuple.tuple(USER_TASK_3, 1.))
       )
     );
   }
@@ -829,12 +828,12 @@ public class FlowNodeFrequencyByFlowNodeReportEvaluationIT extends AbstractProce
       Arguments.of(
         IN,
         new String[]{FIRST_CANDIDATE_GROUP_ID},
-        Collections.singletonList(Tuple.tuple(USER_TASK_1, 1.))
+        List.of(Tuple.tuple(USER_TASK_1, 1.))
       ),
       Arguments.of(
         IN,
         new String[]{FIRST_CANDIDATE_GROUP_ID, SECOND_CANDIDATE_GROUP_ID, null},
-        Arrays.asList(
+        List.of(
           Tuple.tuple(USER_TASK_1, 1.),
           Tuple.tuple(USER_TASK_2, 1.),
           Tuple.tuple(USER_TASK_3, 1.)
@@ -843,12 +842,12 @@ public class FlowNodeFrequencyByFlowNodeReportEvaluationIT extends AbstractProce
       Arguments.of(
         NOT_IN,
         new String[]{SECOND_CANDIDATE_GROUP_ID},
-        Arrays.asList(Tuple.tuple(USER_TASK_1, 1.), Tuple.tuple(USER_TASK_3, 1.))
+        List.of(Tuple.tuple(USER_TASK_1, 1.), Tuple.tuple(USER_TASK_3, 1.))
       ),
       Arguments.of(
         NOT_IN,
         new String[]{FIRST_CANDIDATE_GROUP_ID, SECOND_CANDIDATE_GROUP_ID},
-        Collections.singletonList(Tuple.tuple(USER_TASK_3, 1.))
+        List.of(Tuple.tuple(USER_TASK_3, 1.))
       )
     );
   }
